# RYUGU-ROV-CompanionComputer

./: .gitignore  README.md
deploy/: install_mavlink_router.sh  install_rov_service.sh  ryugu-rov.service  start_rov.sh
deploy/mavlink-router/: main.conf  mavlink-router.service
install/: local_setup.sh  setup.sh
install/ryugu_control/lib/ryugu_control/: gcs_bridge_node  test_arming_mode  test_sensor_reader  test_thrusters_gripper  webcam_streamer
install/ryugu_control/share/ryugu_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ryugu_control/share/ryugu_control/config/: ardusub_params.yaml
install/ryugu_control/share/ryugu_control/launch/: mavros_sub.launch.py  ryugu_GoProduction_QGC.launch.py  ryugu_production.launch.py
log/: latest_build
scripts/: verify_mavlink_router.sh
src/ryugu_control/: package.xml  setup.cfg  setup.py
src/ryugu_control/config/: ardusub_params.yaml
src/ryugu_control/launch/: mavros_sub.launch.py  ryugu_GoProduction_QGC.launch.py  ryugu_production.launch.py
src/ryugu_control/ryugu_control/: gcs_bridge_node.py  test_arming_mode.py  test_sensor_reader.py  webcam_streamer.py
tests/comm/: gcs_simulator.py  test_gcs_comm.py
tests/streaming/: webcam_streamer.py
